集合接口完善
